--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="drone_section.html">FPV Drone</a></li>
+                <li><a href="pages/drone_section.html">FPV Drone</a></li>
                 <li><a href="#other-research">Other Research</a></li>
             </ul>
         </nav>
