--- a/drone_section.html
+++ b/drone_section.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Research Share Information 🌐</title>
+    <title>MAIN PAGE</title>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Research Share Information</h1>
-        <p>A platform dedicated to sharing knowledge, insights, and updates on research and development (R&D) projects.</p>
-        <a href="./"><h2>Click here to return to main page!</h2></a>
+        <h1>FPV Drone Research</h1>
+        <a href="./about"><h2>Click here to learn about me!</h2></a>
     </div>
 </body>
 </html>
