--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Welcome to Research Share Information</h1>
         <p>A platform dedicated to sharing knowledge, insights, and updates on research and development (R&D) projects.</p>
-        <a href="./"><h2>Click here to return to main page!</h2></a>
+        <a href="./home.html"><h2>Click here to return to main page!</h2></a>
     </div>
 </body>
 </html>
