--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Research Share Information 🌐</title>
+    <title>Research Share Information</title>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to Research Share Information</h1>
         <p>A platform dedicated to sharing knowledge, insights, and updates on research and development (R&D) projects.</p>
-        <a href="./drone_section.html"><h2>Go to FPV Drone Research</h2></a>
+        <a href="drone_section.html"><h2>Go to FPV Drone Research</h2></a>
     </div>
 </body>
 </html>
