--- a/drone_section.html
+++ b/drone_section.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>MAIN PAGE</title>
+    <title>FPV Drone Research</title>
 </head>
 <body>
     <div class="container">
         <h1>FPV Drone Research</h1>
-        <a href="./home.html"><h2>Go to Research Overview</h2></a>
+        <a href="home.html"><h2>Go to Research Overview</h2></a>
     </div>
 </body>
 </html>
