--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>FPV Drone Research</h1>
+        <h1>Research Share Information</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -46,7 +46,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 FPV Drone Research. All rights reserved.</p>
+        <p>&copy; 2025 Research Share Information. All rights reserved.</p>
     </footer>
 </body>
 </html>
