--- a/drone_section.html
+++ b/drone_section.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>FPV Drone Research</h1>
-        <a href="index.html"><h2>Go to Research Overview</h2></a>
+        <a href="./index"><h2>Go to Research Overview</h2></a>
     </div>
 </body>
 </html>
