--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Research Share Information</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="drone_section.html">FPV Drone</a></li>
                 <li><a href="#applications">Applications</a></li>
                 <li><a href="#components">Drone Components</a></li>
