--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="./">Home</a></li>
-                <li><a href= "ai.html">Offline AI</a></li>
+                <li><a href= "ai.html">AI Learning</a></li>
                 <li><a href="fpv.html">FPV Drone</a></li>
                 <li><a href="#applications">Applications</a></li>
                 <li><a href="#components">Drone Components</a></li>
