--- a/fpv.html
+++ b/fpv.html
@@ -11,7 +11,7 @@
     <header>
         <h1>FPV Drone Research</h1>
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="./">Home</a></li>
                 <li><a href="fpv.html">FPV Drone</a></li>
                 <li><a href="#applications">Applications</a></li>
@@ -23,6 +23,7 @@
     <section id="overview">
         <h2>FPV Drone Overview</h2>
         <p>FPV drones provide a first-person flying experience, making them popular for racing, cinematography, and various professional applications.</p>
+        <!-- Slides will be appended here by JS -->
     </section>
     
     <section id="technology">
@@ -36,7 +37,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 Research Share Information. All rights reserved.</p>
+        <p>© 2025 Research Share Information. All rights reserved.</p>
     </footer>
 </body>
 </html>
