--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Share Information</title>
     <link rel="stylesheet" href="style.css">
-    <script src="drone.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Research Share Information</h1>
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="./">Home</a></li>
-                <li><a href= "ai.html">AI Learning</a></li>
+                <li><a href="ai.html">AI Learning</a></li>
                 <li><a href="fpv.html">FPV Drone</a></li>
                 <li><a href="#applications">Applications</a></li>
                 <li><a href="#components">Drone Components</a></li>
@@ -21,10 +20,40 @@
         </nav>
     </header>
 
-    <section id="about">
-        <h2>About This Site</h2>
-        <p>Welcome to Research Share Information, a platform dedicated to sharing knowledge on R&D across various fields. Stay informed, collaborate, and explore new technologies.</p>
-    </section>
+    <main>
+        <section id="welcome">
+            <h2>Welcome to Research Share Information</h2>
+            <p>A platform dedicated to sharing knowledge, insights, and updates 
+            on research and development (R&D) projects across various fields. 
+            Whether you're a student, developer, or simply curious about innovation, 
+            this is your space to explore, learn, and collaborate.</p>
+        </section>
+
+        <section id="about">
+            <h2>About This Site</h2>
+            <p>This website serves as a hub for:</p>
+            <ul>
+                <li>Sharing <strong>research findings</strong> and <strong>development progress</strong>.</li>
+                <li>Discussing <strong>emerging technologies</strong> and <strong>innovative ideas</strong>.</li>
+                <li>Providing <strong>resources</strong> and <strong>tools</strong> for R&D enthusiasts.</li>
+                <li>Fostering collaboration and knowledge exchange within the community.</li>
+            </ul>
+        </section>
+
+        <section id="explore">
+            <h2>Why Explore This Site?</h2>
+            <ul>
+                <li><strong>Stay Informed</strong>: Get the latest updates on cutting-edge research and development.</li>
+                <li><strong>Learn and Grow</strong>: Access valuable resources to enhance your skills and knowledge.</li>
+                <li><strong>Collaborate</strong>: Connect with like-minded individuals and contribute to meaningful projects.</li>
+            </ul>
+        </section>
+
+        <section id="outro">
+            <h2>Join Our Journey</h2>
+            <p>Thank you for visiting <strong>Research Share Information</strong>! Let’s explore the future of research and development together. 🚀</p>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2025 Research Share Information. All rights reserved.</p>
