--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li><a href="ai.html">AI Learning</a></li>
                 <li><a href="fpv.html">FPV Drone</a></li>
                 <li><a href="#applications">Applications</a></li>
-                <li><a href="#components">Drone Components</a></li>
             </ul>
         </nav>
     </header>
@@ -33,25 +32,25 @@
             <h2>About This Site</h2>
             <p>This website serves as a hub for:</p>
             <ul>
-                <li>Sharing <strong>research findings</strong> and <strong>development progress</strong>.</li>
-                <li>Discussing <strong>emerging technologies</strong> and <strong>innovative ideas</strong>.</li>
-                <li>Providing <strong>resources</strong> and <strong>tools</strong> for R&D enthusiasts.</li>
-                <li>Fostering collaboration and knowledge exchange within the community.</li>
+                <li>Sharing <strong>research findings</strong> and <strong>development progress</strong></li>
+                <li>Discussing <strong>emerging technologies</strong> and <strong>innovative ideas</strong></li>
+                <li>Providing <strong>resources</strong> and <strong>tools</strong> for R&D enthusiasts</li>
+                <li>Fostering collaboration and knowledge exchange within the community</li>
             </ul>
         </section>
 
         <section id="explore">
             <h2>Why Explore This Site?</h2>
             <ul>
-                <li><strong>Stay Informed</strong>: Get the latest updates on cutting-edge research and development.</li>
-                <li><strong>Learn and Grow</strong>: Access valuable resources to enhance your skills and knowledge.</li>
-                <li><strong>Collaborate</strong>: Connect with like-minded individuals and contribute to meaningful projects.</li>
+                <li><strong>Stay Informed</strong>: Get the latest updates on cutting-edge research and development</li>
+                <li><strong>Learn and Grow</strong>: Access valuable resources to enhance your skills and knowledge</li>
+                <li><strong>Collaborate</strong>: Connect with like-minded individuals and contribute to meaningful projects</li>
             </ul>
         </section>
 
         <section id="outro">
             <h2>Join Our Journey</h2>
-            <p>Thank you for visiting <strong>Research Share Information</strong>! Let’s explore the future of research and development together. 🚀</p>
+            <p>Thank you for visiting <strong>Research Share Information</strong>! Let’s explore the future of research and development together 🚀</p>
         </section>
     </main>
 
