Addeds AI information

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section id="outro">
             <h2>Join Our Journey</h2>
-            <p>Thank you for visiting <strong>Research Share Information</strong>! Let’s explore the future of research and development together 🚀</p>
+            <p>Thank you for visiting <strong>Research Share Information</strong>! Let’s explore the future of research and development together</p>
         </section>
     </main>
 
