--- a/ai.html
+++ b/ai.html
@@ -23,22 +23,22 @@
         <section id="introduction">
             <h2>Introduction to Offline AI</h2>
             <p>Offline AI allows AI models to run locally on personal devices without needing a continuous internet connection. 
-            This is achieved through **model distillation**, where large AI models are compressed into smaller, efficient versions 
+            This is achieved through <strong>model distillation</strong>, where large AI models are compressed into smaller, efficient versions 
             that maintain high performance while consuming fewer resources. With platforms like <a href="https://ollama.com/" target="_blank">Ollama</a>, 
             users can run powerful AI models completely offline.</p>
         </section>
 
         <section id="distillation">
             <h2>What is Model Distillation?</h2>
-            <p>Model distillation is a technique where a large AI model (**teacher**) is used to train a smaller model (**student**) to 
+            <p>Model distillation is a technique where a large AI model (<strong>teacher</strong>) is used to train a smaller model (<strong>student</strong>) to 
             replicate its capabilities while being optimized for lower computational cost.</p>
             <h3>Key Benefits:</h3>
             <ul>
-                <li>Faster inference speed.</li>
-                <li>Reduced hardware requirements.</li>
-                <li>Privacy-focused processing (no cloud dependency).</li>
-                <li>Energy-efficient AI execution.</li>
-                <li>Can run on low-cost hardware like **Raspberry Pi**.</li>
+                <li><strong>Faster inference speed.</strong></li>
+                <li><strong>Reduced hardware requirements.</strong></li>
+                <li><strong>Privacy-focused processing</strong> (no cloud dependency).</li>
+                <li><strong>Energy-efficient AI execution.</strong></li>
+                <li><strong>Can run on low-cost hardware like Raspberry Pi.</strong></li>
             </ul>
         </section>
 
@@ -74,22 +74,22 @@
 
         <section id="raspberry-pi">
             <h2>Running AI on a Raspberry Pi</h2>
-            <p>With model distillation, **offline AI can be run on an affordable Raspberry Pi**, making AI accessible to 
-            more users. Raspberry Pi devices, such as the **Raspberry Pi 4 & 5**, are capable of running lightweight AI 
+            <p>With model distillation, <strong>offline AI can be run on an affordable Raspberry Pi</strong>, making AI accessible to 
+            more users. Raspberry Pi devices, such as the <strong>Raspberry Pi 4 & 5</strong>, are capable of running lightweight AI 
             models locally.</p>
 
             <h3>Why Use Raspberry Pi for AI?</h3>
             <ul>
-                <li>Low-cost and widely available.</li>
-                <li>Runs optimized AI models like **Mistral, Phi-4, and DeepSeek-R1**.</li>
-                <li>Can function as an **offline AI assistant, chatbot, or automation system**.</li>
-                <li>Uses minimal power while providing AI capabilities.</li>
+                <li><strong>Low-cost and widely available.</strong></li>
+                <li><strong>Runs optimized AI models like Mistral, Phi-4, and DeepSeek-R1.</strong></li>
+                <li><strong>Can function as an offline AI assistant, chatbot, or automation system.</strong></li>
+                <li><strong>Uses minimal power while providing AI capabilities.</strong></li>
             </ul>
 
             <h3>How to Set Up Offline AI on Raspberry Pi:</h3>
             <ol>
                 <li>Install <a href="https://ollama.com/" target="_blank">Ollama</a> or TensorFlow Lite.</li>
-                <li>Download a small AI model like **Phi-4 or Gemma 3**.</li>
+                <li>Download a small AI model like <strong>Phi-4 or Gemma 3</strong>.</li>
                 <li>Run AI queries completely offline on your Raspberry Pi.</li>
             </ol>
         </section>
