--- a/fpv.html
+++ b/fpv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FPV Drone Research</title>
     <link rel="stylesheet" href="style.css">
-    <script src="drone.js" defer></script>
+    <!--<script src="drone.js" defer></script>-->
 </head>
 <body>
     <header>
