--- a/proposal_fpv.html
+++ b/proposal_fpv.html
@@ -23,9 +23,9 @@
     <main>
         <section>
             <h2>FPV Drone Research Proposal</h2>
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQf7BPseoTH0BThKth7KkXteJOS0AxrFbmZu7Z54RbvQ127PSQ7_I-lSRdl3OlD7TXSbapYIMQmoQnr/pub?embedded=true" 
-                    width="100%" height="700px" style="border: none;">
-            </iframe>
+            <div class="iframe-container">
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vQf7BPseoTH0BThKth7KkXteJOS0AxrFbmZu7Z54RbvQ127PSQ7_I-lSRdl3OlD7TXSbapYIMQmoQnr/pub?embedded=true"></iframe>
+            </div>
         </section>
     </main>
 
