--- a/fpv.html
+++ b/fpv.html
@@ -15,7 +15,8 @@
                 <li><a href="./">Home</a></li>
                 <li><a href="ai.html">AI Learning</a></li>
                 <li><a href="fpv.html">FPV Drone</a></li>
-                <li><a href="#applications">Applications</a></li>
+                <li><a href="proposal_ai.html">AI Learning Proposal</a></li>
+                <li><a href="proposal_fpv.html">FPV Proposal</a></li>
             </ul>
         </nav>
     </header>
