--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <!-- header.html -->
 <header>
-    <h1>Offline AI & Model Distillation</h1>
+    <h1>Learning Center</h1>
     <nav>
         <ul class="nav-list">
             <li><a href="./">Home</a></li>
