--- a/proposal_fpv.html
+++ b/proposal_fpv.html
@@ -25,5 +25,9 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 Research Share Information. All rights reserved.</p>
+    </footer>
 </body>
 </html>
