--- a/proposal_fpv.html
+++ b/proposal_fpv.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Placeholder for header -->
     <div id="header-placeholder"></div>
 
+    <!-- JavaScript to load header -->
     <script>
         fetch('header.html')
             .then(response => response.text())
@@ -17,6 +19,7 @@
             });
     </script>
 
+    <!-- Content Section -->
     <main>
         <section>
             <h2>FPV Drone Research Proposal</h2>
