--- a/proposal_fpv.html
+++ b/proposal_fpv.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Placeholder for header -->
-    <div id="header-placeholder"></div>
+    <!-- Static Header -->
+    <header>
+        <h1>Offline AI & Model Distillation</h1>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="./">Home</a></li>
+                <li><a href="ai.html">AI Learning</a></li>
+                <li><a href="fpv.html">FPV Drone</a></li>
+                <li><a href="proposal_ai.html">AI Learning Proposal</a></li>
+                <li><a href="proposal_fpv.html">FPV Proposal</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- JavaScript to load header -->
-    <script>
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header-placeholder').innerHTML = data;
-            });
-    </script>
-
-    <!-- Content Section -->
     <main>
         <section>
             <h2>FPV Drone Research Proposal</h2>
