--- a/proposal_fpv.html
+++ b/proposal_fpv.html
@@ -18,7 +18,7 @@
     </script>
 
     <main>
-        <section>
+        <section class="fpv-proposal-section"> <!-- Added unique class here -->
             <h2>FPV Drone Research Proposal</h2>
             <div class="iframe-container">
                 <iframe src="https://docs.google.com/document/d/e/2PACX-1vQf7BPseoTH0BThKth7KkXteJOS0AxrFbmZu7Z54RbvQ127PSQ7_I-lSRdl3OlD7TXSbapYIMQmoQnr/pub?embedded=true"></iframe>
