--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Learning Center</h1>
+    <h1>Learning Space</h1>
     <nav>
         <ul class="nav-list">
             <li><a href="./">Home</a></li>
