--- a/proposal_ai.html
+++ b/proposal_ai.html
@@ -19,6 +19,7 @@
 
     <main>
         <section class="deepseek-proposal-section">
+            <h2>Running AI Distillation on Raspberry Pi</h2>
             <div class="iframe-container">
                 <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ-Lc3t-BJtxPp0gji0m7hphJGtt6pRkq0zkAcZKYbPWTlcCXI2Cg36SUfjlnqirrRHBe_7g5Ma_WPb/pub?embedded=true"></iframe>
             </div>
